[Update] All four dataset results 1/0.1
To do 0.01

--- a/multiacc/Multiacc_Huangrui bank age.ipynb
+++ b/multiacc/Multiacc_Huangrui bank age.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_T = 100\n",
+    "max_T = 500\n",
     "thresh = 1e-4 # Hyper-\n",
     "#set random seed to make results reproducible\n",
     "seed = 1234\n",
@@ -67,8 +67,8 @@
    "outputs": [],
    "source": [
     "path = \"../predict-responsibly/data/\"\n",
-    "dataset = \"adult\"\n",
-    "protected_feature = \"sex\""
+    "dataset = \"bank\"\n",
+    "protected_feature = \"age\""
    ]
   },
   {
@@ -80,16 +80,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, budget=1, error=0.1749708381936344, eod=0.18961424025549867\n",
-      "K=1, budget=0.1, error=0.1753041159806699, eod=0.1936574088566005\n",
-      "K=2, budget=1, error=0.16266666666666665, eod=0.09980066227804651\n",
-      "K=2, budget=0.1, error=0.1635, eod=0.12920709709908385\n",
-      "K=3, budget=1, error=0.164, eod=0.09572141183907856\n",
-      "K=3, budget=0.1, error=0.16233333333333333, eod=0.08731451322741923\n",
-      "K=4, budget=1, error=0.16533333333333333, eod=0.1367731367846337\n",
-      "K=4, budget=0.1, error=0.16583333333333333, eod=0.13800163801362286\n",
-      "K=5, budget=1, error=0.16252708784797465, eod=0.10115598191880953\n",
-      "K=5, budget=0.1, error=0.16169361560260043, eod=0.11837466524996948\n"
+      "K=1, budget=1, error=0.10808594390683943, eod=0.10693432676563158\n",
+      "K=1, budget=0.1, error=0.10726586845989831, eod=0.10418172708430895\n",
+      "K=2, budget=1, error=0.10183666775992128, eod=0.11617505287559216\n",
+      "K=2, budget=0.1, error=0.10183666775992128, eod=0.11617505287559216\n",
+      "K=3, budget=1, error=0.10364053788127255, eod=0.22388653220010607\n",
+      "K=3, budget=0.1, error=0.10331256149557232, eod=0.23740721087935268\n",
+      "K=4, budget=1, error=0.1098720892095769, eod=0.072257551544544\n",
+      "K=4, budget=0.1, error=0.1098720892095769, eod=0.072257551544544\n",
+      "K=5, budget=1, error=0.10185337051008693, eod=0.1357193228643675\n",
+      "K=5, budget=0.1, error=0.10168935542069871, eod=0.14136107180646001\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
     "import pandas as pd\n",
     "df = pd.DataFrame.from_dict(experiment_info)\n",
     "#save df to csv\n",
-    "df.to_csv(\"results/adult_sex.csv\",index=False)"
+    "df.to_csv(\"results/bank_age.csv\",index=False)"
    ]
   },
   {
@@ -252,11 +252,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, error=0.17413764372604565, eod=0.19239262278126779\n",
-      "K=2, error=0.1645, eod=0.0939770349902414\n",
-      "K=3, error=0.16666666666666666, eod=0.1231884058112333\n",
-      "K=4, error=0.1685, eod=0.13963963965094706\n",
-      "K=5, error=0.16536089348224703, eod=0.13808990635455382\n"
+      "K=1, error=0.11595866819747416, eod=0.10165155973124806\n",
+      "K=2, error=0.10511643161692358, eod=0.23134759960997658\n",
+      "K=3, error=0.10774024270252541, eod=0.2281614526834963\n",
+      "K=4, error=0.10888816005247622, eod=0.24292527806755798\n",
+      "K=5, error=0.11005412497949811, eod=0.24330042300979127\n"
      ]
     }
    ],
@@ -288,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.16783304077499187"
+       "0.1095515255097795"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.13745752191764868"
+       "0.20947726262041405"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
