--- a/multiacc/Multiacc_Huangrui rec_sex.ipynb
+++ b/multiacc/Multiacc_Huangrui rec_sex.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_T = 100\n",
+    "max_T = 500\n",
     "thresh = 1e-4 # Hyper-\n",
     "#set random seed to make results reproducible\n",
     "seed = 1234\n",
@@ -67,35 +67,35 @@
    "outputs": [],
    "source": [
     "path = \"../predict-responsibly/data/\"\n",
-    "dataset = \"adult\"\n",
+    "dataset = \"recidivism\"\n",
     "protected_feature = \"sex\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, budget=1, error=0.1749708381936344, eod=0.18961424025549867\n",
-      "K=1, budget=0.1, error=0.1753041159806699, eod=0.1936574088566005\n",
-      "K=2, budget=1, error=0.16266666666666665, eod=0.09980066227804651\n",
-      "K=2, budget=0.1, error=0.1635, eod=0.12920709709908385\n",
-      "K=3, budget=1, error=0.164, eod=0.09572141183907856\n",
-      "K=3, budget=0.1, error=0.16233333333333333, eod=0.08731451322741923\n",
-      "K=4, budget=1, error=0.16533333333333333, eod=0.1367731367846337\n",
-      "K=4, budget=0.1, error=0.16583333333333333, eod=0.13800163801362286\n",
-      "K=5, budget=1, error=0.16252708784797465, eod=0.10115598191880953\n",
-      "K=5, budget=0.1, error=0.16169361560260043, eod=0.11837466524996948\n"
+      "K=1, budget=1, error=0.2793991416309013, eod=0.03109298140733674\n",
+      "K=1, budget=0.1, error=0.3034334763948498, eod=0.06621224940278447\n",
+      "K=2, budget=1, error=0.2657793044224989, eod=0.08655400821251147\n",
+      "K=2, budget=0.1, error=0.26449119793902964, eod=0.08448729982063041\n",
+      "K=3, budget=1, error=0.38686131386861317, eod=0.03543999257516206\n",
+      "K=3, budget=0.1, error=0.3911550021468441, eod=0.023341352804922555\n",
+      "K=4, budget=1, error=0.29841133533705455, eod=0.002836494075710738\n",
+      "K=4, budget=0.1, error=0.3027050236152855, eod=0.006618486141736435\n",
+      "K=5, budget=1, error=0.23711340206185566, eod=0.08426590534354961\n",
+      "K=5, budget=0.1, error=0.23324742268041238, eod=0.07039967369602806\n"
      ]
     }
    ],
    "source": [
     "for K in [1,2,3,4,5]:\n",
-    "    db = np.load(os.path.join(path,dataset,\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
+    "    db = np.load(os.path.join(path,\"compas\",\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
     "    x_val = db[\"x_train\"]\n",
     "    y_val = db[\"y_train\"]\n",
     "    x_test = db[\"x_test\"]\n",
@@ -233,30 +233,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df = pd.DataFrame.from_dict(experiment_info)\n",
     "#save df to csv\n",
-    "df.to_csv(\"results/adult_sex.csv\",index=False)"
+    "df.to_csv(\"results/recidivism_sex.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, error=0.17413764372604565, eod=0.19239262278126779\n",
-      "K=2, error=0.1645, eod=0.0939770349902414\n",
-      "K=3, error=0.16666666666666666, eod=0.1231884058112333\n",
-      "K=4, error=0.1685, eod=0.13963963965094706\n",
-      "K=5, error=0.16536089348224703, eod=0.13808990635455382\n"
+      "K=1, error=0.26824034334763946, eod=0.027215449276761228\n",
+      "K=2, error=0.24903392013739803, eod=0.07588144784135853\n",
+      "K=3, error=0.3276084156290253, eod=0.06727892412711123\n",
+      "K=4, error=0.2589094031773293, eod=0.044623159236297116\n",
+      "K=5, error=0.23797250859106528, eod=0.06703099506657462\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
     "eods = []\n",
     "errors = []\n",
     "for K in [1,2,3,4,5]:\n",
-    "    db = np.load(os.path.join(path,dataset,\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
+    "    db = np.load(os.path.join(path,\"compas\",\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
     "    Y_hat = db[\"ydm_test\"]>0.5\n",
     "    A = db[\"attr_test\"]\n",
     "    Y = db[\"y_test\"]\n",
@@ -288,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.16783304077499187"
+       "0.2683529181764915"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.13745752191764868"
+       "0.05640599510962054"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,6 +325,20 @@
    "source": [
     "np.mean(eods)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
