--- a/multiacc/Multiacc_Huangrui zindi sex.ipynb
+++ b/multiacc/Multiacc_Huangrui zindi sex.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_T = 100\n",
+    "max_T = 500\n",
     "thresh = 1e-4 # Hyper-\n",
     "#set random seed to make results reproducible\n",
     "seed = 1234\n",
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "path = \"../predict-responsibly/data/\"\n",
-    "dataset = \"adult\"\n",
+    "dataset = \"zindi\"\n",
     "protected_feature = \"sex\""
    ]
   },
@@ -80,16 +80,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, budget=1, error=0.1749708381936344, eod=0.18961424025549867\n",
-      "K=1, budget=0.1, error=0.1753041159806699, eod=0.1936574088566005\n",
-      "K=2, budget=1, error=0.16266666666666665, eod=0.09980066227804651\n",
-      "K=2, budget=0.1, error=0.1635, eod=0.12920709709908385\n",
-      "K=3, budget=1, error=0.164, eod=0.09572141183907856\n",
-      "K=3, budget=0.1, error=0.16233333333333333, eod=0.08731451322741923\n",
-      "K=4, budget=1, error=0.16533333333333333, eod=0.1367731367846337\n",
-      "K=4, budget=0.1, error=0.16583333333333333, eod=0.13800163801362286\n",
-      "K=5, budget=1, error=0.16252708784797465, eod=0.10115598191880953\n",
-      "K=5, budget=0.1, error=0.16169361560260043, eod=0.11837466524996948\n"
+      "K=1, budget=1, error=0.12159863945578231, eod=0.052829741459581914\n",
+      "K=1, budget=0.1, error=0.12159863945578231, eod=0.052829741459581914\n",
+      "K=2, budget=1, error=0.11413390010626992, eod=0.018128350548325456\n",
+      "K=2, budget=0.1, error=0.11413390010626992, eod=0.021078203055613032\n",
+      "K=3, budget=1, error=0.1079702444208289, eod=0.09622259180642379\n",
+      "K=3, budget=0.1, error=0.10860786397449522, eod=0.11225172525775651\n",
+      "K=4, budget=1, error=0.1077577045696068, eod=0.18274182881801898\n",
+      "K=4, budget=0.1, error=0.1075451647183847, eod=0.17195046191193236\n",
+      "K=5, budget=1, error=0.12029755579171095, eod=0.12360248446967453\n",
+      "K=5, budget=0.1, error=0.11965993623804463, eod=0.12488726282397705\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
     "import pandas as pd\n",
     "df = pd.DataFrame.from_dict(experiment_info)\n",
     "#save df to csv\n",
-    "df.to_csv(\"results/adult_sex.csv\",index=False)"
+    "df.to_csv(\"results/zindi_sex.csv\",index=False)"
    ]
   },
   {
@@ -252,11 +252,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, error=0.17413764372604565, eod=0.19239262278126779\n",
-      "K=2, error=0.1645, eod=0.0939770349902414\n",
-      "K=3, error=0.16666666666666666, eod=0.1231884058112333\n",
-      "K=4, error=0.1685, eod=0.13963963965094706\n",
-      "K=5, error=0.16536089348224703, eod=0.13808990635455382\n"
+      "K=1, error=0.13010204081632654, eod=0.1179028552654388\n",
+      "K=2, error=0.11732199787460149, eod=0.06001077654961079\n",
+      "K=3, error=0.1179596174282678, eod=0.08358662613928408\n",
+      "K=4, error=0.1179596174282678, eod=0.11075930341891407\n",
+      "K=5, error=0.1226354941551541, eod=0.07465328001256816\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "0.16783304077499187"
+       "0.12119575354052355"
       ]
      },
      "execution_count": 10,
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "0.13745752191764868"
+       "0.08938256827716319"
       ]
      },
      "execution_count": 11,
