[Update Multi Acc]

--- a/multiacc/Multiacc_Huangrui adult_sex.ipynb
+++ b/multiacc/Multiacc_Huangrui adult_sex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "max_T = 100\n",
-    "thresh = 1e-4 # Hyper-\n",
+    "alpha = 1e-4 # Hyper-  \n",
+    "gamma = 1 # Hyper-\n",
     "#set random seed to make results reproducible\n",
     "seed = 1234\n",
     "np.random.seed(seed)\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,27 +74,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, budget=1, error=0.1749708381936344, eod=0.18961424025549867\n",
-      "K=1, budget=0.1, error=0.1753041159806699, eod=0.1936574088566005\n",
-      "K=2, budget=1, error=0.16266666666666665, eod=0.09980066227804651\n",
-      "K=2, budget=0.1, error=0.1635, eod=0.12920709709908385\n",
-      "K=3, budget=1, error=0.164, eod=0.09572141183907856\n",
-      "K=3, budget=0.1, error=0.16233333333333333, eod=0.08731451322741923\n",
-      "K=4, budget=1, error=0.16533333333333333, eod=0.1367731367846337\n",
-      "K=4, budget=0.1, error=0.16583333333333333, eod=0.13800163801362286\n",
-      "K=5, budget=1, error=0.16252708784797465, eod=0.10115598191880953\n",
-      "K=5, budget=0.1, error=0.16169361560260043, eod=0.11837466524996948\n"
+      "K=1, budget=1, error=0.17113814364272623, eod=0.19556495506950689\n",
+      "error0=0.20780825302693354, error1=0.09518935516888434\n",
+      "K=2, budget=1, error=0.16383333333333333, eod=0.14347374839032984\n",
+      "error0=0.20438683948155534, error1=0.08199195171026157\n",
+      "K=3, budget=1, error=0.15783333333333333, eod=0.11039119421452698\n",
+      "error0=0.19664328657314628, error1=0.08067729083665338\n",
+      "K=4, budget=1, error=0.16483333333333333, eod=0.12080262081707077\n",
+      "error0=0.20609542842867848, error1=0.08212318477716575\n",
+      "K=5, budget=1, error=0.15769294882480414, eod=0.11281036754094398\n",
+      "error0=0.19621513944223107, error1=0.07967725668179526\n"
      ]
     }
    ],
    "source": [
+    "errors_pre_0 = []\n",
+    "errors_pre_1 = []\n",
+    "errors_post_0 = []\n",
+    "errors_post_1 = []\n",
+    "\n",
     "for K in [1,2,3,4,5]:\n",
     "    db = np.load(os.path.join(path,dataset,\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
     "    x_val = db[\"x_train\"]\n",
@@ -111,7 +117,7 @@
     "    # get the validation index\n",
     "\n",
     "    valid_index = np.arange(len(x_val))\n",
-    "    for budget in [1,0.1]:\n",
+    "    for budget in [1]:\n",
     "        best_epoch, best_acc = -1,0\n",
     "        best_logits_valid = logits\n",
     "        predicted_test_logits = test_logits\n",
@@ -174,7 +180,7 @@
     "                clf_prediction = clf.predict(x_val[idxs2][samples2])\n",
     "                corr = np.mean(clf_prediction * residual[idxs2][samples2])\n",
     "                # print(t, i, corr)\n",
-    "                if corr > thresh:\n",
+    "                if corr > alpha:\n",
     "                    # h_models.append(clf)\n",
     "                    # h = (tf.matmul(latent_ph, tf.constant(np.expand_dims(clf.coef_,-1),\n",
     "                    #                                         dtype=tf.float32))[:,0] + clf.intercept_)\n",
@@ -200,9 +206,9 @@
     "                        # update all logits (This might never used)\n",
     "                        s = np.ones_like(control)\n",
     "                        s_test = np.ones_like(control_test)\n",
-    "                    logits -= .1 * h * s\n",
+    "                    logits -= gamma * h * s\n",
     "                    # update the test logits accordingly\n",
-    "                    test_logits -= .1 * h_test * s_test\n",
+    "                    test_logits -= gamma * h_test * s_test\n",
     "                    break\n",
     "            # 如果 i == 2 说明没有在X_0,X_1找到合适的h，那么就不更新了\n",
     "            if i==2:\n",
@@ -228,67 +234,129 @@
     "        experiment_info[\"K\"].append(K)\n",
     "        experiment_info[\"budget\"].append(budget)\n",
     "        experiment_info[\"Error\"].append(error)\n",
-    "        experiment_info[\"Equal opportunity difference\"].append(eod)"
+    "        experiment_info[\"Equal opportunity difference\"].append(eod)\n",
+    "        Ydm = db[\"ydm_test\"]>0.5\n",
+    "        Y_hat0 = Ydm[A==0]\n",
+    "        Y_hat1 = Ydm[A==1]\n",
+    "        Y0 = Y[A==0]\n",
+    "        Y1 = Y[A==1]\n",
+    "        error0 = np.mean(Y_hat0 != Y0)\n",
+    "        error1 = np.mean(Y_hat1 != Y1)\n",
+    "        errors_pre_0.append(error0)\n",
+    "        errors_pre_1.append(error1)\n",
+    "        Y_hat_post0 = Y_hat[A==0]\n",
+    "        Y_hat_post1 = Y_hat[A==1]\n",
+    "        error_post0 = np.mean(Y_hat_post0 != Y0)\n",
+    "        error_post1 = np.mean(Y_hat_post1 != Y1)\n",
+    "        print(\"error0={}, error1={}\".format(error_post0,error_post1))\n",
+    "        errors_post_0.append(error_post0)\n",
+    "        errors_post_1.append(error_post1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame.from_dict(experiment_info)\n",
-    "#save df to csv\n",
-    "df.to_csv(\"results/adult_sex.csv\",index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, error=0.17413764372604565, eod=0.19239262278126779\n",
-      "K=2, error=0.1645, eod=0.0939770349902414\n",
-      "K=3, error=0.16666666666666666, eod=0.1231884058112333\n",
-      "K=4, error=0.1685, eod=0.13963963965094706\n",
-      "K=5, error=0.16536089348224703, eod=0.13808990635455382\n"
+      "For sex = 0, pre error = 0.20911582724854688, post error = 0.20222978939050895, the difference is -0.00688603785803793\n",
+      "For sex = 1, pre error = 0.08443877843241596, post error = 0.08393180783495205, the difference is -0.0005069705974639072\n"
      ]
     }
    ],
    "source": [
+    "#print the pre and pros error for each group\n",
+    "print(\"For sex = 0, pre error = {}, post error = {}, the difference is {}\".format(np.mean(errors_pre_0),np.mean(errors_post_0), np.mean(errors_post_0)-np.mean(errors_pre_0)))\n",
+    "print(\"For sex = 1, pre error = {}, post error = {}, the difference is {}\".format(np.mean(errors_pre_1),np.mean(errors_post_1), np.mean(errors_post_1)-np.mean(errors_pre_1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.20780825302693354,\n",
+       " 0.20438683948155534,\n",
+       " 0.19664328657314628,\n",
+       " 0.20609542842867848,\n",
+       " 0.19621513944223107]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errors_post_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# df = pd.DataFrame.from_dict(experiment_info)\n",
+    "# #save df to csv\n",
+    "# df.to_csv(\"results/adult_sex.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# let us check based on multiacc metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first get the previous results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now get the error and eod of human\n",
     "eods = []\n",
-    "errors = []\n",
+    "errors_pre_0 = []\n",
+    "errors_pre_1 = []\n",
+    "errors_post_0 = []\n",
+    "errors_post_1 = []\n",
+    "\n",
     "for K in [1,2,3,4,5]:\n",
     "    db = np.load(os.path.join(path,dataset,\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
     "    Y_hat = db[\"ydm_test\"]>0.5\n",
     "    A = db[\"attr_test\"]\n",
     "    Y = db[\"y_test\"]\n",
-    "    # print(\"A\",A.shape)\n",
-    "    # print(\"Y\",Y.shape)\n",
-    "    TP = np.multiply(Y, Y_hat)\n",
-    "    mask0 = np.multiply(Y,1-A)\n",
-    "    mask1 = np.multiply(Y,A)\n",
-    "    TP0 = np.multiply(TP, mask0)\n",
-    "    TP1 = np.multiply(TP, mask1)\n",
-    "    tpr0 = np.sum(TP0) / (np.sum(mask0) + EPS)\n",
-    "    tpr1 = np.sum(TP1) / (np.sum(mask1) + EPS)\n",
-    "    #get the error rate of the test set\n",
-    "    error = np.mean(Y_hat != Y)\n",
-    "    eod = np.abs(tpr0 - tpr1)\n",
-    "    errors.append(error)\n",
-    "    eods.append(eod)\n",
-    "    print(\"K={}, error={}, eod={}\".format(K,error,eod))"
+    "    Y_hat0 = Y_hat[A==0]\n",
+    "    Y_hat1 = Y_hat[A==1]\n",
+    "    Y0 = Y[A==0]\n",
+    "    Y1 = Y[A==1]\n",
+    "    error0 = np.mean(Y_hat0 != Y0)\n",
+    "    error1 = np.mean(Y_hat1 != Y1)\n",
+    "    errors_pre_0.append(error0)\n",
+    "    errors_pre_1.append(error1)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +365,7 @@
        "0.16783304077499187"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +376,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\numpy\\core\\_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.13745752191764868"
+       "nan"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
