--- a/multiacc/Multiacc_Huangrui bank age.ipynb
+++ b/multiacc/Multiacc_Huangrui bank age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,27 +73,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, budget=1, error=0.10808594390683943, eod=0.10693432676563158\n",
-      "K=1, budget=0.1, error=0.10726586845989831, eod=0.10418172708430895\n",
-      "K=2, budget=1, error=0.10183666775992128, eod=0.11617505287559216\n",
-      "K=2, budget=0.1, error=0.10183666775992128, eod=0.11617505287559216\n",
-      "K=3, budget=1, error=0.10364053788127255, eod=0.22388653220010607\n",
-      "K=3, budget=0.1, error=0.10331256149557232, eod=0.23740721087935268\n",
-      "K=4, budget=1, error=0.1098720892095769, eod=0.072257551544544\n",
-      "K=4, budget=0.1, error=0.1098720892095769, eod=0.072257551544544\n",
-      "K=5, budget=1, error=0.10185337051008693, eod=0.1357193228643675\n",
-      "K=5, budget=0.1, error=0.10168935542069871, eod=0.14136107180646001\n"
+      "K=1, budget=1, error=0.10611776283418074, eod=0.16682422276994296\n",
+      "error0=0.1989247311827957, error1=0.10319742852309254\n",
+      "K=1, budget=0.1, error=0.1113662456946039, eod=0.1614024355303959\n",
+      "error0=0.1989247311827957, error1=0.10861106411774657\n",
+      "K=2, budget=1, error=0.09904886848146933, eod=0.11347599754499432\n",
+      "error0=0.1592356687898089, error1=0.09745834034674297\n",
+      "K=2, budget=0.1, error=0.10036077402427025, eod=0.10379795629591393\n",
+      "error0=0.16560509554140126, error1=0.09863659316613364\n",
+      "K=3, budget=1, error=0.1031485733027222, eod=0.23203870611303878\n",
+      "error0=0.13297872340425532, error1=0.10219966159052453\n",
+      "K=3, budget=0.1, error=0.10511643161692358, eod=0.25642895000952903\n",
+      "error0=0.14361702127659576, error1=0.1038917089678511\n",
+      "K=4, budget=1, error=0.10905214824532633, eod=0.06295707481171353\n",
+      "error0=0.21875, error1=0.10609632873021219\n",
+      "K=4, budget=0.1, error=0.10806821908822564, eod=0.0813990459717795\n",
+      "error0=0.2, error1=0.10559110811721119\n",
+      "K=5, budget=1, error=0.098245038543546, eod=0.16879407602558993\n",
+      "error0=0.15606936416184972, error1=0.09655638082376772\n",
+      "K=5, budget=0.1, error=0.10168935542069871, eod=0.21533850479785305\n",
+      "error0=0.15606936416184972, error1=0.100101282916948\n"
      ]
     }
    ],
    "source": [
+    "errors_pre_0 = []\n",
+    "errors_pre_1 = []\n",
+    "errors_post_0 = []\n",
+    "errors_post_1 = []\n",
     "for K in [1,2,3,4,5]:\n",
     "    db = np.load(os.path.join(path,dataset,\"{}{}_{}.npz\".format(dataset,K,protected_feature)))\n",
     "    x_val = db[\"x_train\"]\n",
@@ -228,7 +242,43 @@
     "        experiment_info[\"K\"].append(K)\n",
     "        experiment_info[\"budget\"].append(budget)\n",
     "        experiment_info[\"Error\"].append(error)\n",
-    "        experiment_info[\"Equal opportunity difference\"].append(eod)"
+    "        experiment_info[\"Equal opportunity difference\"].append(eod)\n",
+    "        Ydm = db[\"ydm_test\"]>0.5\n",
+    "        Y_hat0 = Ydm[A==0]\n",
+    "        Y_hat1 = Ydm[A==1]\n",
+    "        Y0 = Y[A==0]\n",
+    "        Y1 = Y[A==1]\n",
+    "        error0 = np.mean(Y_hat0 != Y0)\n",
+    "        error1 = np.mean(Y_hat1 != Y1)\n",
+    "        errors_pre_0.append(error0)\n",
+    "        errors_pre_1.append(error1)\n",
+    "        Y_hat_post0 = Y_hat[A==0]\n",
+    "        Y_hat_post1 = Y_hat[A==1]\n",
+    "        error_post0 = np.mean(Y_hat_post0 != Y0)\n",
+    "        error_post1 = np.mean(Y_hat_post1 != Y1)\n",
+    "        print(\"error0={}, error1={}\".format(error_post0,error_post1))\n",
+    "        errors_post_0.append(error_post0)\n",
+    "        errors_post_1.append(error_post1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For age = 0, pre error = 0.17983995593195937, post error = 0.17301746997013523, the difference is -0.006822485961824137\n",
+      "For age = 1, pre error = 0.10751916658197799, post error = 0.10223398973002304, the difference is -0.005285176851954954\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print the pre and pros error for each group\n",
+    "print(\"For age = 0, pre error = {}, post error = {}, the difference is {}\".format(np.mean(errors_pre_0),np.mean(errors_post_0), np.mean(errors_post_0)-np.mean(errors_pre_0)))\n",
+    "print(\"For age = 1, pre error = {}, post error = {}, the difference is {}\".format(np.mean(errors_pre_1),np.mean(errors_post_1), np.mean(errors_post_1)-np.mean(errors_pre_1)))"
    ]
   },
   {
@@ -237,10 +287,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame.from_dict(experiment_info)\n",
-    "#save df to csv\n",
-    "df.to_csv(\"results/bank_age.csv\",index=False)"
+    "# import pandas as pd\n",
+    "# df = pd.DataFrame.from_dict(experiment_info)\n",
+    "# #save df to csv\n",
+    "# df.to_csv(\"results/bank_age.csv\",index=False)"
    ]
   },
   {
@@ -350,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
